# NeuralNetViewer

./: .gitignore
NeuralNetViewer/: CMakeLists.txt  activation.cpp  activation.h  checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  drawarea.cpp  fonts.qrc  globaloptionswidget.h  layer.cpp  layer.h  layernoptions.cpp  layernoptions.h  layeroptions.cpp  layeroptions.h  lineedit.h  loss.cpp  loss.h  main.cpp  mainwindow.cpp  mainwindow.h  mnistinputwidget.cpp  mnistinputwidget.h  neuralnetwork.cpp  neuralnetwork.h  resources.qrc  slider.cpp  valuecomboboxwidget.cpp  valuecomboboxwidget.h  valuesliderwidget.cpp  valuesliderwidget.h
NeuralNetViewer/NeuralNetwork/: layer.cpp  layer.h  neuralnetwork.cpp  neuralnetwork.h  optimiser.h
NeuralNetViewer/NeuralNetwork/activation/: activation.cpp  activation.h  activation_utils.h
NeuralNetViewer/NeuralNetwork/dropout/: dropout.cpp  dropout.h
NeuralNetViewer/NeuralNetwork/initialisation/: initialisation.cpp  initialisation.h  initialisation_utils.h
NeuralNetViewer/NeuralNetwork/loss/: loss.cpp  loss.h  loss_utils.h
NeuralNetViewer/NeuralNetwork/optimiser/: optimiser.cpp  optimiser.h  optimiser_params.h  optimiser_utils.h
NeuralNetViewer/Widgets/: buttonsframe.cpp  globaloptionswidget.cpp  globaloptionswidget.h  layeroptions.cpp  layeroptions.h  layerscrollarea.cpp  layerscrollarea.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  networkconfigwidget.cpp  networkconfigwidget.h  valuecomboboxwidget.cpp  valuecomboboxwidget.h  valuesliderwidget.cpp  valuesliderwidget.h
NeuralNetViewer/Widgets/BaseWidgets/: iconbutton.cpp  iconbutton.h  lineedit.cpp  logwidget.cpp  logwidget.h  slider.cpp  slider.h  statusbar.cpp  statusbar.h  valuecheckboxwidget.cpp  valuecheckboxwidget.h  valuecomboboxbuttonwidget.cpp  valuecomboboxbuttonwidget.h  valuecomboboxwidget.cpp  valuecomboboxwidget.h  valuesliderwidget.cpp  valuesliderwidget.h
NeuralNetViewer/Widgets/NetworkConfigWidgets/: buttonsframe.cpp  buttonsframe.h  globaloptionswidget.cpp  globaloptionswidget.h  layeroptions.cpp  layeroptions.h  layerscrollarea.cpp  layerscrollarea.h  networkconfigwidget.cpp  networkconfigwidget.h  optimiseradvancedcontrolswidget.cpp  optimiseradvancedcontrolswidget.h
NeuralNetViewer/Widgets/TestWidgets/: testoutputwidget.cpp  testoutputwidget.h  testwidget.cpp  testwidget.h
NeuralNetViewer/Widgets/TrainWidgets/: graphwidget.cpp  graphwidget.h  trainingstatsframe.cpp  trainingstatsframe.h  trainoptionswidget.cpp  trainoptionswidget.h  trainstatuswidget.cpp  trainstatuswidget.h  trainwidget.cpp  trainwidget.h
NeuralNetViewer/Widgets/UserTestWidgets/: MNISTUserOutputAttributes.h  drawarea.cpp  drawarea.h  mnistinputwidget.cpp  mnistinputwidget.h  mnistuseroutputwidget.cpp  mnistuseroutputwidget.h  saliencymaparea.cpp  saliencymaparea.h
NeuralNetViewer/configParameterDataStructs/: neuralnetlayerdata.cpp  neuralnetlayerdata.h  neuralnetoptionsdata.cpp  neuralnetoptionsdata.h
NeuralNetViewer/dataset_classes/: datasetcontainer.cpp  datasetcontainer.h  datasettype.h
NeuralNetViewer/metrics/: EpochStats.h  epochstats.cpp  metrics.h  predictionresults.h  samplelogmessagestats.h  testingbatchresults.h  testoutputstats.h  teststats.h  teststatusstats.h
NeuralNetViewer/qcustomplot/: qcustomplot.cpp
NeuralNetViewer/threads/: neuralnetworktester.cpp  neuralnetworktester.h  neuralnetworktrainer.cpp  neuralnetworktrainer.h
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  NeuralNetViewer.ilk  build.ninja  cmake_install.cmake  fonts.qrc.depends  qtcsettings.cmake  resources.qrc.depends
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-1728b3e987d868670a00.json  cmakeFiles-v1-44ca89578f5cb4ea53bf.json  codemodel-v2-319030dcf43bc9881bf2.json  codemodel-v2-4c246612d25abb51485f.json  codemodel-v2-a6226fedce4a7e961085.json  codemodel-v2-aa94aa56b9a0f307e160.json  directory-.-Debug-4917fc2f1ae97c653426.json  directory-.-Debug-7ee9428962783495d47f.json  directory-.-Debug-8a5464ee5caba65a4ee3.json  directory-.-Debug-f395b893b8365ee2984e.json  (+10 more)
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/NeuralNetViewer_autogen/: deps  mocs_compilation.cpp
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/NeuralNetViewer_autogen/EWIEGA46WW/: moc_checkbox.cpp  moc_checkbox.cpp.d  moc_combobox.cpp  moc_combobox.cpp.d  moc_globaloptionswidget.cpp  moc_globaloptionswidget.cpp.d  moc_layernoptions.cpp  moc_layernoptions.cpp.d  moc_layeroptions.cpp  moc_layeroptions.cpp.d  moc_lineedit.cpp  moc_lineedit.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_slider.cpp  moc_slider.cpp.d  moc_valuecomboboxwidget.cpp  moc_valuecomboboxwidget.cpp.d  moc_valuesliderwidget.cpp  moc_valuesliderwidget.cpp.d
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/NeuralNetViewer_autogen/IAMAOEVCJ6/: moc_neuralnetoptionsdata.cpp  moc_neuralnetoptionsdata.cpp.d
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/NeuralNetViewer_autogen/K2C3BTQ2UP/: moc_checkbox.cpp  moc_checkbox.cpp.d  moc_combobox.cpp  moc_combobox.cpp.d  moc_iconbutton.cpp  moc_iconbutton.cpp.d  moc_lineedit.cpp  moc_lineedit.cpp.d  moc_slider.cpp  moc_slider.cpp.d
build-NeuralNetViewer-Desktop_x86_windows_msvc2022_pe_64bit-Debug/NeuralNetViewer_autogen/WHF3XMZT5M/: moc_buttonsframe.cpp  moc_buttonsframe.cpp.d  moc_globaloptionswidget.cpp  moc_globaloptionswidget.cpp.d  moc_layeroptions.cpp  moc_layeroptions.cpp.d  moc_layerscrollarea.cpp  moc_layerscrollarea.cpp.d  moc_mainwidget.cpp  moc_mainwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_networkconfigwidget.cpp  moc_networkconfigwidget.cpp.d  moc_valuecomboboxwidget.cpp  moc_valuecomboboxwidget.cpp.d  moc_valuesliderwidget.cpp  moc_valuesliderwidget.cpp.d
(+646 files in other folders)
